# tickpay

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
